<resources>
    <string name="app_name">StoryAppSubmission</string>
    <string name="my_story_app">My Story App</string>
    <string name="welcome_messages">Halo, pengguna My Stopy App! Siap untuk berbagi kisah dengan orang tercinta? Eits, asal jangan masa lalu yang suram, ya!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_account">Belum mempunyai akun?</string>
    <string name="registration">Daftar</string>
    <string name="back">Kembali</string>
    <string name="registration_page">Silakan isi formulir pendaftaran</string>
    <string name="name">Nama</string>
    <string name="registration_button">Pendaftaran Akun</string>
    <string name="setting_of_account">Pengaturan Akun</string>
    <string name="image_button">Yeah! anda mengklik aksi button</string>
    <string name="setting_of_application">Pengaturan Aplikasi</string>
    <string name="theme_of_app">Mode Gelap</string>
    <string name="application_information">Info Aplikasi</string>
    <string name="version_0_1">V.1.0</string>
    <string name="info_fragment">My Story App adalah tugas submission kelas Intermediate Android dari Dicoding </string>
    <string name="logout">Keluar</string>
    <string name="description">Deskripsi</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="create">Buat</string>
    <string name="setting">Pengaturan</string>
    <string name="toolbar1">MyStoryApp</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="spill_your_story">Waktunya bercerita! Cerita apa yang kamu dapatkan hari ini?</string>
    <string name="start">Mulai Sekarang</string>
    <string name="greeting_menu_1">Selamat datang di My Story App! Bagikan cerita Anda kepada dunia dan lihatlah cerita orang-orang di dunia</string>
    <string name="greeting_menu_2">Ayo buat cerita Anda! Kalau bisa jangan cerita suram masa lalu, ya!</string>
    <string name="email">Email</string>
    <string name="successfully_created_account">Yeay! Akun Anda telah berhasil dibuat!</string>
    <string name="success_login">Login Sukses! Sesukses kita di masa depan:)</string>
    <string name="inappropriate_username_and_password">Ups, username dan password tidak sesuai. Coba lagi, ya!</string>
    <string name="invalid_account">Maaf, akun  tidak berhasil dibuat</string>
    <string name="todo">TODO</string>
    <string name="language">Bahasa</string>
    <string name="invalid_user_email">Ups, format email tidak benar</string>
    <string name="logout_confirmation">Yakin mau kelar dari akun Anda?</string>
    <string name="cancel">Tidak</string>
    <string name="yes">Ya</string>
    <string name="failed_pic">Maaf, gagal mengambil foto</string>
    <string name="failed_camera">Maaf, gagal memuat camera</string>
    <string name="permission_is_no_granted">Maaf, izin tidak diberikan</string>
    <string name="success_upload">Yeay! Cerita berhasil terunggah!</string>
    <string name="failed_retrofit">Maaf, gagal memuat retrofit</string>
    <string name="add_warning_image">Mari tambahkan gambar</string>
    <string name="invalid_user_password">Password minimal 8 karakter</string>
    <string name="filling_name">Masukkan nama lengkap</string>
    <string name="filling_email">Masukkan email</string>
    <string name="filling_password">Masukkan password</string>
    <string name="preview_image_user">Tambahkan foto Anda</string>
    <string name="view_detail_story">Cerita Anda</string>
    <string name="view_story_item">Item cerita Anda</string>
    <string name="view_greeting_onboarding_image">Gambar onboarding</string>
    <string name="view_main">Gambar halaman utama</string>
    <string name="happy_chibby" translatable="false">Happy Chibby</string>
    <string name="disconnected_warning">Ups, koneksi Anda hilang</string>
    <string name="retry_application">Silakan coba lagi</string>
    <string name="story_location">Lokasi:</string>
    <string name="please_retry">Silakan coba Lagi</string>
    <string name="failed_to_upload">Mohon maaf, cerita Anda gagal diunggah</string>
    <string name="gps_permission">Mohon aktifkan izin lokasi Anda</string>
    <string name="error_happened">Maaf, ada kesalahan</string>
    <string name="error_connection">Ups.. ada yang salah dengan koneksi</string>
    <string name="a_floating_list">Daftar Cerita</string>
    <string name="hello">Halo, pengguna My Story App! Pasti mau kepo cerita teman-teman ya? Yukk klik tombol daftar cerita!</string>
</resources>