<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userinterface.detailofuserstory.DetailOfMyPastStory">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_detail_story"
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="14dp"
            android:gravity="center_vertical|start"
            android:text="@string/toolbar1"
            android:textColor="@color/toolbar" />

        <ImageButton
            android:id="@+id/btn_setting_detail_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="14dp"
            android:background="@drawable/ic_settings"
            android:contentDescription="@string/image_button"
            android:padding="22dp"
            tools:ignore="RtlHardcoded" />

        <ImageButton
            android:id="@+id/btn_add_a_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="72dp"
            android:background="@drawable/ic_add_photo"
            android:contentDescription="@string/image_button"
            android:padding="22sp"
            tools:ignore="RtlHardcoded" />

    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:id="@+id/progress_bar_detail_story"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_detail_story"
        android:layout_width="0dp"
        android:layout_height="301dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="14dp"
        android:contentDescription="@string/view_detail_story"
        android:transitionName="image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_detail_story"
        tools:src="@tools:sample/backgrounds/scenic" />


    <TextView
        android:id="@+id/name_of_person_in_detail_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/name"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_detail_story" />

    <TextView
        android:id="@+id/description_detail_story"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/description"
        android:transitionName="description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_of_person_in_detail_story" />

</androidx.constraintlayout.widget.ConstraintLayout>